# minixrs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASING.md  deny.toml  rust-toolchain.toml  sonar-project.properties
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
03/a934280fa0/: metadata.json
03/a934280fa0/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
03/d94e54eae6/: metadata.json
03/d94e54eae6/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
09/26f9c187f5/: metadata.json
09/26f9c187f5/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
0c/bef71cbb5a/: metadata.json
0c/bef71cbb5a/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
0e/7c99c40a7f/: metadata.json
0e/7c99c40a7f/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
14/74851993a2/: metadata.json
14/74851993a2/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
16/4c9fbce4e0/: metadata.json
16/4c9fbce4e0/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
17/713e9d767d/: metadata.json
17/713e9d767d/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
18/21598b8dfe/: metadata.json
1a/5ef0ed5c47/: metadata.json
1b/abb252eb79/: metadata.json
21/98e5b8035d/: metadata.json
26/3e8ca16ead/: metadata.json
32/272ecebbed/: metadata.json
34/be7da667d1/: metadata.json
35/999f63de71/: metadata.json
35/add150d9b7/: metadata.json
36/1ffb4d685f/: metadata.json
37/1a23a3a4dd/: metadata.json
3a/14707104b4/: metadata.json
42/b4b5313d93/: metadata.json
44/e23af91f8f/: metadata.json
46/9cc6e791f0/: metadata.json
46/ef0ae50a39/: metadata.json
48/f7d4fc7fb8/: metadata.json
49/cde4d37ec4/: metadata.json
54/da612c054a/: metadata.json
57/d179e3dc87/: metadata.json
58/0a195fc98e/: metadata.json
5d/e1ad859d80/: metadata.json
68/c02d216ee4/: metadata.json
69/33a95ed6f6/: metadata.json
6d/ceb0fda2fa/: metadata.json
70/6bb7c744b7/: metadata.json
70/74bb23ac91/: metadata.json
71/a94b4cee12/: metadata.json
78/ccf17c0f52/: metadata.json
7a/c2b9aa959e/: metadata.json
7a/e66d1c4ec2/: metadata.json
7c/a9bc87b5f4/: metadata.json
7c/b2f3e8a47d/: metadata.json
81/f5dd3108ef/: metadata.json
86/cca1e4637f/: metadata.json
8a/381cfb6e24/: metadata.json
8b/e6d1aec365/: metadata.json
9c/c3ebae3230/: metadata.json
a4/7b6db4e061/: metadata.json
a6/ea0cdff073/: metadata.json
a9/aa72920279/: metadata.json
aa/22ded423f4/: metadata.json
b0/c76983b830/: metadata.json
b1/73178fc40d/: metadata.json
b2/0aaa37f0fe/: metadata.json
b3/04de914100/: metadata.json
b3/fa619d94eb/: metadata.json
b6/27578f8a93/: metadata.json
bc/1c3d58f1eb/: metadata.json
book/: book.toml
book/src/: SUMMARY.md  build.md  introduction.md
c1/7b9a484977/: metadata.json
c3/8ba2500339/: metadata.json
c8/52b361bbfd/: metadata.json
d0/0f3d0d857b/: metadata.json
d1/dc737a9e6c/: metadata.json
d2/62ea6e35b6/: metadata.json
d2/ca1e704361/: metadata.json
d4/a32be8ff61/: metadata.json
d7/e9831082fe/: metadata.json
da/f72e3e7ee3/: metadata.json
dc/ff6c20d54b/: metadata.json
docs/: architecture.md  boot.md  build.md  drivers.md  ipc.md  memory-layout.md  minix3-mapping.md  musl.md  plan.md  servers.md  syscalls.md
docs/plans/: phase-2-ipc.md  phase-3-vm.md  phase-4-servers.md  phase-5-prep.md
drivers/driver-rt/: Cargo.toml
drivers/driver-rt/src/: lib.rs
drivers/memory/: Cargo.toml
drivers/virtio-blk/: Cargo.toml
drivers/virtio-console/: Cargo.toml
drivers/virtio-net/: Cargo.toml
e0/50a73046f5/: metadata.json
e3/f0beb1c9d1/: metadata.json
e4/39ecc495a3/: metadata.json
e5/211c0f1973/: metadata.json
e5/4b74aaa375/: metadata.json
e9/09f1113157/: metadata.json
eb/1088d83cd2/: metadata.json
eb/1767d080ec/: metadata.json
f3/c850f06ee5/: metadata.json
f8/72e76f5b1a/: metadata.json
fs/mfs/: Cargo.toml
fs/pfs/: Cargo.toml
kernel/: Cargo.toml  build.rs
kernel-shared/: Cargo.toml
kernel-shared/src/: callnr.rs  com.rs  endpoint.rs  error.rs  ipc_const.rs  lib.rs  message.rs  signal.rs  sys_limits.rs
kernel/src/: clock.rs  main.rs  panic.rs  uart.rs
minix-ipc/: Cargo.toml
minix-ipc/src/: lib.rs
minixrs/: Cargo.toml  README.md
minixrs/src/: lib.rs
server-rt/: Cargo.toml
server-rt/src/: classify.rs  ds.rs  init.rs  lib.rs  sef.rs  signal.rs
servers/ds/: Cargo.toml
servers/pm/: Cargo.toml
servers/pm/src/: main.rs  mproc.rs
servers/rs/: Cargo.toml  user.ld
servers/sched/: Cargo.toml
servers/vfs/: Cargo.toml
servers/vm/: Cargo.toml  user.ld
tests/: qemu-boot.expected  qemu-boot.forbidden
tools/: check-boot-log.sh  limine.conf  qemu-run.sh
userland/coreutils/: Cargo.toml
userland/init/: Cargo.toml  user.ld
userland/sh/: Cargo.toml
userland/worker/: Cargo.toml  user.ld
(+337 files in other folders)
