[package]
name = "minixrs-kernel-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Shared MINIX ABI types for minix.rs: IPC message layout, server endpoints, and call numbers used by the kernel and user space."
keywords = ["minix", "microkernel", "ipc", "abi", "no-std"]
categories = ["no-std", "os"]

[dependencies]
