[package]
name = "minixrs-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "User-space IPC library for minix.rs: thin wrappers over the kernel's aarch64 SVC trap (SEND/RECEIVE/SENDREC)."
keywords = ["minix", "microkernel", "ipc", "syscall", "no-std"]
categories = ["no-std", "os"]

[dependencies]
minixrs-kernel-shared = { path = "../kernel-shared", version = "0.1.0" }
