[package]
name = "minixrs-driver-rt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Driver runtime for minix.rs user-space device drivers (VirtIO block, net, console, memory)."
keywords = ["minix", "microkernel", "driver", "virtio", "no-std"]
categories = ["no-std", "os"]

[dependencies]
minixrs-kernel-shared = { path = "../../kernel-shared", version = "0.1.0" }
minixrs-ipc = { path = "../../minix-ipc", version = "0.1.0" }
