[package]
name = "minixrs-pm"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
publish = false

[[bin]]
name = "minixrs-pm"
path = "src/main.rs"

[dependencies]
minixrs-kernel-shared = { path = "../../kernel-shared" }
minixrs-ipc = { path = "../../minix-ipc" }
minixrs-server-rt = { path = "../../server-rt" }
